[package]
name = "redis-entra-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
bytes = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
jwks-client = "0.2"
redis-protocol = { version = "5", features = ["resp2", "resp3", "bytes"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
webpki-roots = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
# For parsing env
dotenvy = "0.15"
chrono = "0.4.41"